2005-12-07  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/ui/menus.xml,
	  data/alexandria/ui/popups.xml,
	  lib/alexandria/ui/main_app.rb:

	- Added contextual popup and Edit menu actions to set the rating of the
	  selected books ;
	- When right clicking on the books view, select the item/row if the mouse
	  if on an item/row.

	* lib/alexandria/book.rb:

	Simplify the code.

	* data/alexandria/ui/popups.xml,
	  lib/alexandria/ui/main_app.rb:

	When right clicking in the libraries view, if the mouse is not on an item
	show another popup menu with New Library and New Smart Library actions.

	* data/alexandria/glade/preferences_dialog.glade,
	  lib/alexandria/ui/preferences_dialog.rb:
	
	Set the providers tree view as reorderable with drag-and-drop.

	* lib/alexandria/ui/main_app.rb:

	- Work around the beginning of a drag when running a dialog within the
	  GtkIconView's item-activated or GtkTreeView's row-activated signal
	  handlers ;
	- When right clicking, if the mouse is not on an item, deselect everything
	  before showing the popup menu.

	* README:

	We now require Ruby-GNOME2 0.14.0 or later.

2005-12-02  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/multi_drag_treeview.rb:

	Introduce drag-and-drop from any books view to the library view.

	* README:

	- Mention Ruby/Pango as a new dependency ;
	- Mention GTK+ 2.8.0 or greater as recommended (but optional) as 
	  it brings DND for the icon view.

	* TODO:

	One thing less.

2005-11-25  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/smart_library.rb,
	  lib/alexandria/ui/new_smart_library_dialog.rb,
	  lib/alexandria/ui/smart_library_properties_dialog_base.rb:

	More work on smart libraries.

2005-11-24  Mathieu Leduc-Hamel <arrak@arrak.org>

	* lib/alexandria/book_providers/renaud.rb:

	Implementing the publish year field.
	
2005-11-18  Laurent Sansonetti  <lrz@gnome.org>
