@@ -1,3 +1,10 @@
+2005-12-09  Laurent Sansonetti  <lrz@gnome.org>
+
+	* lib/alexandria/ui/main_app.rb:
+
+	- Renamed 'Set Rating' to 'My rating' ;
+	- Reworded rating 1..5 menu items.
+
 2005-12-07  Laurent Sansonetti  <lrz@gnome.org>
 
 	* data/alexandria/ui/menus.xml,
